# Argus

./: .gitignore  README.md
argus_base/: CMakeLists.txt  package.xml
argus_base/cfg/: imgParam.cfg  pidParam.cfg
argus_base/hardware_node/: hardware_node.ino
argus_base/hardware_node/test_motors/: test_motors.ino
argus_base/launch/: argus_basic.launch  argus_teleop_keyboard.launch  param.yaml  rpicam.launch
argus_base/scripts/: main_control.py  main_controller.py  main_controller.py.save  main_controller.py.save.1  rpi_stream.py  teleop_twist_keyboard.py
argus_base/src/: rpicam_stream.cpp
argus_computer_vision/: CMakeLists.txt  package.xml
argus_computer_vision/cfg/: lineParam.cfg
argus_computer_vision/launch/: export.launch  line_param.yaml
argus_computer_vision/notebooks/: line_classification.ipynb
argus_computer_vision/scripts/: color_detection.py  face_detection.py  intersection_detection.py  line_detection.py  line_follow.py
argus_control/: CMakeLists.txt  package.xml
argus_control/cfg/: pidParam.cfg
argus_control/scripts/: main_FSM.py  main_controller.py  odom_movement_detector.py  states.py  test.py  test_movement.py
argus_msgs/: CMakeLists.txt  package.xml
argus_msgs/msg/: Distance.msg  LineInfo.msg
argus_simulation/: CMakeLists.txt  model.sdf  package.xml
argus_simulation/launch/: spawn_robot.launch  spawn_sdf.launch  start_test_world.launch  start_test_world2.launch
argus_simulation/meshes/: right_front_wheel.STL
argus_simulation/models/argus/: model.config  model.sdf
argus_simulation/models/argus/meshes/: base_link.STL  left_front_wheel.STL
argus_simulation/models/platform/: model.sdf
argus_simulation/models/platform/materials/scripts/: line.material  line3.material  path.material
argus_simulation/worlds/: simple_world.world  simple_world2.world
argus_teleop/: CMakeLists.txt  package.xml
argus_teleop/scripts/: teleop_twist_keyboard.py
low_level_controller_node/: ARGUS_configs.h  encoder.h  encoder_AB.h  imu.h  kinematics_controller.h  low_level_controller_node.ino  robot.h  ros_stuff.h  rpm_controller.h  ultrasonic_dist.h
robotic_arm/: README.md  arm.cpp  arm.h  robotic_arm.ino
robotic_arm/robotic_arm/: arm.cpp  arm.h  interpolation.cpp  interpolation.h  log_err.h  robotic_arm.ino  sequence.h  servo_arm.cpp  servo_arm.h  trigonometry.cpp  trigonometry.h
robotic_arm/scripts/: serial_test.py
